# MeshConvolution

code/GraphAE/: graphAE.py  graphAE_latent.py  graphAE_reconstruct.py  graphAE_test.py  graphAE_train.py
code/GraphAE27_new_compare/: graphAE_train.py
code/GraphSampling/: CMakeLists.txt  main.cpp  meshCNN.h  meshLoader.h  meshPooler_visualizer_new.h
data/CAPSULES/: template.ply
train/0223_GraphAE27_compare/log_00/: events.out.tfevents.1711632671.DES-GLANEUSES
train/0422_graphAE_dfaust/: 10_conv_res.config
train/0422_graphAE_dfaust/log_10/: events.out.tfevents.1711525618.DES-GLANEUSES  events.out.tfevents.1711575318.DES-GLANEUSES  events.out.tfevents.1711575360.DES-GLANEUSES  events.out.tfevents.1715719822.DES-GLANEUSES  events.out.tfevents.1715721641.DES-GLANEUSES  events.out.tfevents.1715808423.DES-GLANEUSES
train/0422_graphAE_dfaust/log_10/Evaluate/MSE Geo Error/: events.out.tfevents.1715809571.DES-GLANEUSES  events.out.tfevents.1715810846.DES-GLANEUSES
train/0422_graphAE_dfaust/tmp_10/: epoch0000_gt__eval.ply  epoch0000_out__eval.ply
train/0524_graphAE_capsules/: 10_conv_res.config  30_conv_res.config
train/0524_graphAE_capsules/ConnectionMatrices/: _pool0.npy  _pool1.npy  _pool2.npy  _pool3.npy  _pool4.npy  _pool5.npy  _pool6.npy  _pool7.npy  _unpool0.npy  _unpool1.npy  _unpool2.npy  _unpool3.npy  _unpool4.npy  _unpool5.npy  _unpool6.npy  _unpool7.npy
train/0524_graphAE_capsules/test_30/epoch0590/: latent_vectors.npy
train/0524_graphAE_capsules/test_30/epoch0994/: latent_vectors.npy
(+8 files in other folders)
